--- a/src/app/components/barraNavegacion/barraNavegacion.module.css
+++ b/src/app/components/barraNavegacion/barraNavegacion.module.css
@@ -84,7 +84,7 @@
 .transition {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
   transition-duration: 500ms;
-  background-color: #b3841b;
+  background-color: #ff8c00;
   border-radius: 9999px;
   width: 0;
   height: 0;
