--- a/src/app/reserva/reserva.module.css
+++ b/src/app/reserva/reserva.module.css
@@ -25,7 +25,7 @@
   margin-top: 60px;
 }
 .reserva_content_titulo span {
-  color: #e6b54a;
+  color: #ffba66;
 }
 
 .reserva_container_content p {
@@ -81,7 +81,7 @@
 }
 
 .reserva_form_container form button {
-  background-color: #e6b54a;
+  background-color: #ffba66;
   border: 0;
   border-radius: 5px;
   padding: 16px 40px;
@@ -172,9 +172,9 @@
   height: 60px;
   padding: 8px;
   font-size: 23px;
+  border: none;
   color: #fff;
   border-radius: 10px;
-  border: 2.5px solid #b3841b;
   box-shadow: 0px 0px 20px -20px;
   cursor: pointer;
   background-color: #e6b74f;
@@ -184,7 +184,7 @@
 }
 
 .button_Reserva:hover {
-  background-color: #b3841b;
+  background-color: #ff8c00;
   box-shadow: 0px 0px 20px -18px;
 }
 
